--- a/Python_Learning.ipynb
+++ b/Python_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuk9ptQym1tg3pW9acZfun",
+      "authorship_tag": "ABX9TyNGqtz2F6rZG4coyl3UVtdt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,16 +75,17 @@
         "print(5) #int\n",
         "print(7.5) #float\n",
         "print(True) #bool\n",
-        "print('String')"
+        "print('String') #string\n",
+        "print('1+3j')   #complex"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EQs-fVIa1OaI",
-        "outputId": "e9c62d04-80e9-4f83-902a-f689a74b9558"
+        "outputId": "3f6324ed-e2d6-4b92-8fb3-2bc4219f7a54"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +94,44 @@
             "5\n",
             "7.5\n",
             "True\n",
-            "String\n"
+            "String\n",
+            "1+3j\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "###List/array\n",
+        "print((1,2,3,4))\n",
+        "\n",
+        "###Tuple\n",
+        "print((92, 'Ashmita', 'CSE'))\n",
+        "\n",
+        "###Sets\n",
+        "print({92, 'Ashmita', 'CSE'})\n",
+        "\n",
+        "###Dictionary\n",
+        "print({'ID': 92, 'Name': 'Ashmita', 'Dept': 'CSE'})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5UKCj909BGTs",
+        "outputId": "41c8d1ca-3edd-4f4d-e1c4-dfae62e0ae23"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 2, 3, 4)\n",
+            "(92, 'Ashmita', 'CSE')\n",
+            "{'Ashmita', 92, 'CSE'}\n",
+            "{'ID': 92, 'Name': 'Ashmita', 'Dept': 'CSE'}\n"
           ]
         }
       ]
