--- a/Python_Learning.ipynb
+++ b/Python_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxBQUc2d1ZNBMOxTantDDf",
+      "authorship_tag": "ABX9TyNpOC5xb1LPCSTVMHbW5N0r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,40 @@
             "India 5 True\n",
             "India/5/True\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## This a a comment.\n",
+        "\n",
+        "\"\"\" Comment can be written is two different way.\n",
+        "First Type is shown above and\n",
+        "this is the second type. \"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "Kd9vHJEjRHJx",
+        "outputId": "527dc5ec-6077-40c1-e454-2a079dc957b8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "' Comment can be written is two different way.\\nFirst Type is shown above and\\nthis is the second type. '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ]
     },
@@ -104,7 +138,7 @@
       "cell_type": "code",
       "source": [
         "###List/array\n",
-        "print((1,2,3,4))\n",
+        "print([1,2,3,4])\n",
         "\n",
         "###Tuple\n",
         "print((92, 'Ashmita', 'CSE'))\n",
@@ -120,17 +154,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5UKCj909BGTs",
-        "outputId": "41c8d1ca-3edd-4f4d-e1c4-dfae62e0ae23"
+        "outputId": "a1b4ebc8-1cec-4431-f1c2-30016271e8f7"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(1, 2, 3, 4)\n",
+            "[1, 2, 3, 4]\n",
             "(92, 'Ashmita', 'CSE')\n",
-            "{'Ashmita', 92, 'CSE'}\n",
+            "{'CSE', 92, 'Ashmita'}\n",
             "{'ID': 92, 'Name': 'Ashmita', 'Dept': 'CSE'}\n"
           ]
         }
@@ -219,7 +253,7 @@
         "\n",
         "> 1. Dynamic typing vs Static Typing: Python is clever enough that it can automatically detect the datatype of the variable. We don't have to declare the datatype like C,C++ or JAVA\n",
         "\n",
-        "> 2. Dynamic Binding vs Static Typing: If a variable is assigned to a specific datatype then it can not be canged in C/C++/JAVA. But this is not the case in Python.\n",
+        "> 2. Dynamic Binding vs Static Binding: If a variable is assigned to a specific datatype then it can not be canged in C/C++/JAVA. But this is not the case in Python.\n",
         "\n",
         "\n",
         "\n",
@@ -253,7 +287,7 @@
         },
         "outputId": "4e9db2c6-fbef-42d0-bd2e-83aa065a3e9a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +328,7 @@
         "id": "t3pUE0INdaL7",
         "outputId": "bca32844-c651-418e-c194-6f7244c5dc53"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,7 +360,7 @@
         "id": "ZYqIH-tDd4DI",
         "outputId": "1c654253-1a85-4a13-ee13-2b60ef4995b3"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +398,7 @@
         "id": "h-iRfaykaiVQ",
         "outputId": "d278d70a-e2bf-4bac-f6ba-55a8d8824a80"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +457,7 @@
         "id": "6ubYMC3DgYAq",
         "outputId": "90e78e35-74d9-4c37-b4c7-82bea441992f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +495,7 @@
         "id": "kvoZpuS_gib5",
         "outputId": "816f7b8a-d7c5-4f0b-dcbe-d38d3cd0bc74"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +528,7 @@
         "id": "ElVuAaLwglXi",
         "outputId": "f14d9cae-66ee-4a59-a81d-74197b9a3537"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -522,7 +556,7 @@
         "id": "dU8NRxUwgp_x",
         "outputId": "cda0321f-2c62-4092-c4b9-ec7443635f37"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
